# technitium-rest-api-client

./: .bumpversion.cfg  .pre-commit-config.yaml  .safety-policy.yml  CHANGELOG.md  Makefile  README.md  pyproject.toml  setup.cfg
docs/: conf.py
technitium_rac/: __init__.py  api.py  cli.py  configurator.py  constants.py  foos.py
tests/: __init__.py  conftest.py  docker-compose.yml  test_cli.py
